--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Equinoxx.xyz</title>
     <script type="text/javascript" src="scripts.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h1 class="chakra-petch-light" id="bigtext">Equinoxx.xyz</h1>
