--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1 class="chakra-petch-light" id="bigtext">Equinoxx.xyz</h1>
+    <h1 class="chakra-petch-light" id="bigtext">Equinoxx.dev</h1>
     <div onclick="rainbow()" class="unselectable">
-        <h3 class="chakra-petch-light" id="smoltext">BRB Getting a redesign</h3>
+        <h3 class="chakra-petch-light" id="smoltext">New domain, who dis?</h3>
     </div>
 </body>
 </html>
