--- a/index.html
+++ b/index.html
@@ -11,20 +11,12 @@
             background-color: black;
             color: white;
         }
-        #main-title {
-            font-family: 'Orbitron', sans-serif;
-            display: inline-block;
-            font-size: 20px;
-            margin-left: 20px;
-        }
+        header {
+            margin: 10px 0 10px 0;}
         #navbar {
             padding: 0;
-            margin: 0;
             display: flex;
             transform: translateX(-20px);
-        }
-        #navbar section:first-child {
-            
         }
         #navbar section {
             display: flex;
@@ -32,6 +24,8 @@
             background-color: #333;
             align-items: center;
             transform: skew(-20deg);
+            font-size: 20px;
+            transition: padding 0.3s ease;
         }
         #navbar section a {
             display: block;
@@ -42,14 +36,33 @@
         }
         #navbar section:hover {
             background-color: #555;
+            text-decoration: underline 2px;
+            padding: 0 20px 0 20px;
+            transition: padding 0.3s ease;
+        }
+        #main-title {
+            font-family: 'Orbitron', sans-serif;
+            display: inline-block;
+            font-size: 30px;
+            margin-left: 20px;
         }
     </style>
+    <script>
+        let counter = 0;
+        function secret() {
+            counter++;
+            if (counter === 21) {
+                alert('Shh! This is an unfinished secret, come back later!');
+                
+            }
+        }
+    </script>
 </head>
 <body>
     <header>
         <div id="navbar">
             <section>
-                <a href="#" id="main-title">equinoxx.dev</a>
+                <a href="#" id="main-title" onclick="secret()">equinoxx.dev</a>
             </section>
             <section>
                 <a href="#">link 1</a>
