Refined hover effect on Navbar

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             padding: 0 20px 0 20px;
             transition: padding 0.3s ease;
         }
+        #navbar section:hover:has(#main-title) {
+            padding: 0 20px 0 0;
+            transition: padding 0.3s ease;
+        }
         #main-title {
             font-family: 'Orbitron', sans-serif;
             display: inline-block;
