--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
 
         .content {
             margin: 15px;
+            
+            h1 {
+                font-size: 30px;
+            }
+            h2 {
+                font-size: 25px;
+            }
+            h3 {
+                font-size: 20px;
+            }
         }
 
         .divider {
@@ -113,7 +123,10 @@
             <div class="divider"></div>
         </div>
         <div class="content">
-            <h2>Thingy 1</h2>
+            <h1>hi! welcome to my website!</h1>
+            <h2>about me</h2>
+            <p>my name is equinoxx and i like computers and stuff!</p>
+            <h3>who am i?</h3>
             <p>Content goes here</p>
         </div>
     </div>
@@ -123,14 +136,20 @@
             <div class="divider"></div>
             <p>Here's some music I like!</p>
                 <div class="player-controls">
-                    <button id="toggle-playing-button" onclick="togglePlaying()">⏸</button>
-                    <div id="player-time-container">
-                        <p id="player-time">00:00 / 00:00</p>
+                    <div class="player-controls-top"><button id="toggle-playing-button" onclick="togglePlaying()">⏸</button>
+                        <div id="player-time-container">
+                            <p id="player-time">00:00 / 00:00</p>
+                        </div>
+                        <button id="previous-button" onclick="previous()">⏮</button>
+                        <button id="next-button" onclick="next()">⏭</button>
                     </div>
-                    <button id="previous-button" onclick="previous()">⏮</button>
-                    <button id="next-button" onclick="next()">⏭</button>
+                    <div class="player-controls-bottom">
+                        <p>-</p>
+                        <label for="volume-slider"></label>
+                        <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5">
+                        <p>+</p>
+                    </div>
                 </div>
-            
             <div id="player-container">
                 <h2 id="now-playing">Nothing Playing :(</h2>
                 <audio id="player" controls="" preload="auto" src=""></audio>
