--- a/index.html
+++ b/index.html
@@ -4,135 +4,37 @@
     <meta charset="UTF-8">
     <title>equinoxx.dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" data-rh="true">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
-        @import url('scripts/audio-player/audio-player.css');
-
-        .container {
-            display: grid;
-            grid-template-areas: ". main sidebar .";
-            grid-template-columns: 1fr 600px 300px 1fr;
-            width: 100dvw;
-            gap: 30px;
-            margin-top: 30px;
-        }
-
-        body {
-            margin: 0;
-            width: 100%;
-            font-family: 'Orbitron', sans-serif;
-            background-color: black;
-            background-image: url("assets/background.jpg");
-        }
-
-        .main {
-            grid-area: main;
-            background-color: black;
-            color: white;
-            filter: drop-shadow(10px 10px 0 rgba(0, 0, 0, 0.25));
-        }
-
-        .sidebar {
-            grid-area: sidebar;
-            color: white;
-            filter: drop-shadow(10px 10px 0 rgba(0, 0, 0, 0.25));
-
-            .sidebar-section {
-                background-color: black;
-                padding: 15px;
-                margin-bottom: 30px;
-            }
-
-            h2 {
-                margin: 0;
-                text-align: center;
-            }
-        }
-
-        .header {
-            margin: 15px;
-
-            .main-title {
-                display: block;
-                font-weight: bold;
-                font-size: 30px;
-                text-align: center;
-                text-decoration: none;
-                color: white;
-            }
-
-            .main-title:hover {
-                text-decoration: underline;
-            }
-
-            nav {
-                display: flex;
-            }
-
-            nav a {
-                color: white;
-                text-decoration: none;
-                flex-grow: 1;
-                text-align: center;
-            }
-
-            nav a:hover {
-                text-decoration: underline;
-            }
-        }
-
-        .content {
-            margin: 15px;
-            
-            h1 {
-                font-size: 30px;
-            }
-            h2 {
-                font-size: 25px;
-            }
-            h3 {
-                font-size: 20px;
-            }
-        }
-
-        .divider {
-            border-top: 1px dashed white;
-            height: 0;
-            margin: 15px 0 15px 0;
-        }
-
-        @media (max-width: 1000px) {
-            .container {
-                grid-template-areas: "main" "sidebar";
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 <div class="container">
     <div class="main">
         <div class="header">
-            <a class="main-title" href="#">equinoxx.dev</a>
+            <div class="heading">
+                <a class="equinoxx-dev" href="index.html">equinoxx.dev</a>
+            </div>
             <div class="divider"></div>
             <nav>
-                <a href="#">home</a>
-                <a href="#">projects</a>
-                <a href="#">links</a>
+                <a href="index.html">home</a>
+                <a href="projects.html">projects</a>
+<!--                <a href="#">links</a>-->
             </nav>
             <div class="divider"></div>
         </div>
         <div class="content">
-            <h1>hi! welcome to my website!</h1>
-            <h2>about me</h2>
+            <h1>Hi! Welcome to my website!</h1>
+            <h2>Who am i?</h2>
             <p>my name is equinoxx and i like computers and stuff!</p>
-            <h3>who am i?</h3>
-            <p>Content goes here</p>
+            <h2>What is this?</h2>
+            <p>
+                This is meant to be a personal website made for stuff about me, to share with you!<br>
+                You'll find some of my projects, some music I like, and maybe some blog posts too if I ever get around to writing them.
+            </p>
         </div>
     </div>
     <div class="sidebar">
         <div class="sidebar-section">
-            <h2>music</h2>
+            <h2>Music</h2>
             <div class="divider"></div>
             <p>Here's some music I like!</p>
                 <div class="player-controls">
@@ -144,10 +46,10 @@
                         <button id="next-button" onclick="next()">⏭</button>
                     </div>
                     <div class="player-controls-bottom">
-                        <p>-</p>
+                        <button id="volume-up-button" onclick="volumeDown()">-</button>
                         <label for="volume-slider"></label>
                         <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5">
-                        <p>+</p>
+                        <button id="volume-down-button" onclick="volumeUp()">+</button>
                     </div>
                 </div>
             <div id="player-container">
@@ -159,9 +61,9 @@
             <script src="scripts/audio-player/audio-player.js"></script>
         </div>
         <div class="sidebar-section">
-            <h2>blog</h2>
+            <h2>Blog</h2>
             <div class="divider"></div>
-            <p>canonical sucks</p>
+            <p>nothing yet...</p>
         </div>
     </div>
 </div>
