Add link to Nyx project and style anchor elements

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         </div>
         <div class="content">
             <h1>My Projects!</h1>
-            <h2>Nyx [Hiatus]</h2>
+            <h2><a href="https://github.com/Equinoxx4978/nyx-bot" target="_blank">Nyx [Hiatus]</a></h2>
             <h3>Summary</h3>
             <p>
                 Multipurpose discord bot written in JavaScript using discord.js.
