--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>equinoxx.dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" data-rh="true">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div class="container">
