--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <title>equinoxx.dev / projects</title><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" data-rh="true">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div class="container">
